crates/ironhermes-cli/tests/snapshots/tui_rata_snapshots__snap_double_ctrl_c_pending_exit_warning.snap
---
source: crates/ironhermes-cli/tests/tui_rata_snapshots.rs
assertion_line: 123
expression: render(&app)
---
"┌Chat [live]───────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"Chat · ? · ? · 0/128.0K (0%) · Ctrl+C again to quit                             "
"┌Prompt────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
