crates/ironhermes-cli/tests/snapshots/tui_rata_snapshots__snap_empty_transcript.snap
---
source: crates/ironhermes-cli/tests/tui_rata_snapshots.rs
assertion_line: 42
expression: render(&app)
---
"┌Chat [live]───────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"Chat · ? · ? · 0/128.0K (0%) · ctrl+c cancel · Ctrl+T thinking · Ctrl+K skills ·"
"┌Prompt────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
