crates/ironhermes-cli/tests/snapshots/tui_rata_snapshots__snap_error_banner.snap
---
source: crates/ironhermes-cli/tests/tui_rata_snapshots.rs
assertion_line: 138
expression: render(&app)
---
"┌Chat [live]───────────────────────────────────────────────────────────────────┐"
"│You: do something                                                            ▲│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ▼│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"Chat · ? · ? · 0/128.0K (0%) · error: api error                                 "
"┌Prompt────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
