crates/ironhermes-cli/tests/snapshots/tui_rata_snapshots__snap_in_flight_streaming_partial_delta.snap
---
source: crates/ironhermes-cli/tests/tui_rata_snapshots.rs
assertion_line: 65
expression: render(&app)
---
"┌Chat [live]───────────────────────────────────────────────────────────────────┐"
"│You: hello                                                                   ▲│"
"│Hermes: partial resp                                                         █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ║│"
"│                                                                             ▼│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"░░░▒▓█▓▒░░                                                                      "
"Chat · ? · ? · 0/128.0K (0%) · connecting...                                    "
"┌Prompt────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
