crates/ironhermes-cli/tests/snapshots/tui_rata_snapshots__snap_scroll_active_indicator.snap
---
source: crates/ironhermes-cli/tests/tui_rata_snapshots.rs
assertion_line: 110
expression: render(&app)
---
"┌Chat [live]───────────────────────────────────────────────────────────────────┐"
"│Hermes: consectetur adipiscing elit                                          ▲│"
"│You: Lorem ipsum dolor sit amet                                              ║│"
"│Hermes: consectetur adipiscing elit                                          ║│"
"│You: Lorem ipsum dolor sit amet                                              ║│"
"│Hermes: consectetur adipiscing elit                                          ║│"
"│You: Lorem ipsum dolor sit amet                                              █│"
"│Hermes: consectetur adipiscing elit                                          █│"
"│You: Lorem ipsum dolor sit amet                                              █│"
"│Hermes: consectetur adipiscing elit                                          █│"
"│You: Lorem ipsum dolor sit amet                                              █│"
"│Hermes: consectetur adipiscing elit                                          █│"
"│You: Lorem ipsum dolor sit amet                                              ║│"
"│Hermes: consectetur adipiscing elit                                          ║│"
"│You: Lorem ipsum dolor sit amet                                              ║│"
"│Hermes: consectetur adipiscing elit                                          ║│"
"│You: Lorem ipsum dolor sit amet                                              ║│"
"│Hermes: consectetur adipiscing elit                                          ▼│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"Chat · ? · ? · 0/128.0K (0%) · ctrl+c cancel · /help commands                   "
"┌Prompt────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
