crates/ironhermes-cli/tests/snapshots/tui_rata_snapshots__snap_tool_call_activity_row.snap
---
source: crates/ironhermes-cli/tests/tui_rata_snapshots.rs
assertion_line: 81
expression: render(&app)
---
"┌Chat [live]───────────────────────────────────────────────────────────────────┐"
"│You: run bash                                                                ▲│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ▼│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"░░░▒▓█▓▒░░                                                                      "
"Chat · ? · ? · 0/128.0K (0%) · tool: bash                                       "
"┌Prompt────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
