crates/ironhermes-cli/tests/snapshots/tui_rata_snapshots__snap_two_message_conversation.snap
---
source: crates/ironhermes-cli/tests/tui_rata_snapshots.rs
assertion_line: 51
expression: render(&app)
---
"┌Chat [live]───────────────────────────────────────────────────────────────────┐"
"│You: hello                                                                   ▲│"
"│Hermes: hi there                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ║│"
"│                                                                             ▼│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"Chat · ? · ? · 0/128.0K (0%) · ctrl+c cancel · Ctrl+T thinking · Ctrl+K skills ·"
"┌Prompt────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
